# ma4830_project

./: CMakeLists.txt  README.md
.github/: pull_request_template.md
.github/workflows/: continuous_integration.yml  main.yml
dockerfiles/: .env  Dockerfile  docker-compose-dev.yaml  docker-compose.yaml  update-sourcecode.sh
src/: CMakeLists.txt  add_int.c  data_structure.h  int_header.h  main.c  mortar.c  multiply_int.c  planning_utils.c  planning_utils.h  printTable.c  solution_calculation.c  trajectory.c  trajectory.h  user_interface.c  user_interface.h
tests/: CMakeLists.txt  main.c  test_int.c  test_planning_utils.c  test_trajectory.c  utils.c  utils.h
